
[v1.1.0p5a]
- Bugfix: StackDockStation and FlapDockStation did not fire dockablesRepositioned if its content was only moved

[v1.1.0p5b]
! API: DockSituation can now use a PlaceholderStrategy to load the intermediate format and another strategy to load the final DockElements. The DockFactories had to be modified in order to allow this.
- Bugfix: In Common, placeholders are no longer removed in the intermediate layout information no longer
- Bugfix: The FocusStrategy can now decide whether to transfer focus if the user clicked on a non-focusable Component or not. Currently focus is not transfered if the user clicked on a JComboBox
- API: The content-pane of a Dockable is no longer focusable

[v1.1.0p5c]
- Bugfix: Perspectives did ignore the "ignoreChildren" tag. DockFactories did throw NPE if called with a perspective that has the "ignoreChildren" tag set to true.
- API: Additional method "isWorkingArea" in "CStationPerspective".
! API: DockRelocator has two additional methods "getRemote" and "getDirectRemote" with a parameter "forgeDrag". If that parameter is true, then a DnD operation can be forced to start.
- Bugfix: NoStackTheme.Meta, field "meta" was never set.

[v1.1.0p6]
- Bugfix: CombinerTarget is created earlier on SplitDockStation in order to allow the Combiner to paint the DnD operation
- Bugfix: Merger can now also be applied on a move operation. The child DockStation in a merge operation only gets removed from its parent if the parent is not the parent DockStation of the operation
! API: CGroupBehavior now creates a CGroupMovement and does not execute its changes directly
! API: CMaximizedBehavior and all associated methods have been removed, the ordinary CGroupBehavior can now perform all necessary tasks
- Bugfix: Maximizing a minimized CDockable on a stack now maximizes the entire stack
- Bugfix: Externalizing a minimized CDockable that has no size makes now sure that the window has a minimum size and (if possible) is not placed at 0/0